force-app/main/default/objects/CommercientSF6__Ord__c/CommercientSF6__Ord__c.object-meta.xml
<CustomObject>
    <label>Sales Order Custom Forms</label>
    <nameField>
        <label>Sales Order Custom Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Custom Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>