force-app/main/default/objects/CommercientSF6__Ord__c/fields/CommercientSF6__DateValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__DateValue__c</fullName>
    <label>DateValue</label>
    <type>DateTime</type>
</CustomField>