force-app/main/default/objects/CommercientSF6__Ord__c/fields/CommercientSF6__ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>250</length>
    <type>Text</type>
</CustomField>