force-app/main/default/objects/CommercientSF6__Ord__c/fields/CommercientSF6__FieldType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__FieldType__c</fullName>
    <label>FieldType</label>
    <length>250</length>
    <type>Text</type>
</CustomField>